Levitation import of page 2401 rev 7822.

--- a/0-/Client:Sopran.mediawiki
+++ b/0-/Client:Sopran.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=Sopran| author=[[Marc Menghin]]| website=[http://forum.digital-d.at digitalDreams Board]| version=0.1| devlanguage=Ruby| ui=Graphical (GTK, Gnome)| screenshots=[http://marcmenghin.gamedev.at/v7.0/files/images/projects/sopran_trayicon00.png]| description=Sopran is a simple XMMS2 Client. It consists of a Platform (with plugins and some high-level logic to interact with XMMS2) and a few plugins. Currently the only thing a user will notice is a TrayIcon with basic controls.}}
+{{Client| name=Sopran| author=[http://marcmenghin.gamedev.at/ Marc Menghin]| website=[http://forum.digital-d.at digitalDreams Board]| version=0.1| devlanguage=Ruby| ui=Graphical (GTK, Gnome)| screenshots=[http://marcmenghin.gamedev.at/v7.0/files/images/projects/sopran_trayicon00.png]| description=Sopran is a simple XMMS2 Client. It consists of a Platform (with plugins and some high-level logic to interact with XMMS2) and a few plugins. Currently the only thing a user will notice is a TrayIcon with basic controls.}}
