add t-shirt news.
Levitation import of page 5 rev 7833.

--- a/0-/Main Page.mediawiki
+++ b/0-/Main Page.mediawiki
@@ -5,7 +5,7 @@ __NOEDITSECTION__
 {|
 |-
 |[[Image:Logo-white-128.png]]
-|The XMMS2 team has just finished running a contest to attract fresh and creative submissions from visual artists and designers all over the world, to give the project a more identifiable brand, and a bit of an identity boost. The competition entry deadline has now passed, and submitted logos have been voted on. We would like to present our new logo by Arnaud DIDRY to the left!
+|The XMMS2 Team has just prepared T-Shirts of their new logo. Head over to the shop and get your gear: http://www.zazzle.com/tobiasr/
 |-
 |}
 </div>
