--- a/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
@@ -1,5 +1,43 @@
 = Service Client =
 
+Since a service client differs from a normal client in the way that it interacts with other clients by providing services and corresponding methods, we need a way to let the server know what our service client provides and how others can use them.  This is done by [[#Registration|registering]] the services and methods to the server.
+
+After registration, the server will have enough information to tell clients how to call those methods.  Upon method requesting, the callback function you set earlier during registration will be invoked on service client.  If you have set any arguments for the method, it is time to get them and do what needs to be done and return data to the callee.  Among these steps, fetching the arguments and returning data are covered in [[#Inside_a_Method|this section]].
+
+== Registration ==
+
+Registration must happen before any method can be called or even seen as callable by the clients.  Even if [[Summer_of_Code_2007/Service_Clients/scm|Service Client Manager]] has the information of the method, as long as the server does not have a registered copy of it, the method remains "offline".
+
+There are three major steps for registering a method, registering the service it belongs to, creating the method structure and registering the method.  You have to provide all information about the service when you register it, including the name of the service, description, major and minor versions.  Here is an example.
+
+ char service[] = "service.name";
+ result = xmmsc_service_register (connection, service, "service description", 1, 0);
+ if (xmmsc_result_iserror (result))
+     fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
+ xmmsc_result_unref (result);
+
+Then you have to create the method structure and push the types of the arguments and return values to it.  If you do not have any arguments or return values for the method, simply ignore the function calls to push types.
+
+ xmmsc_service_method_t *method;
+ method = xmmsc_service_method_new ("method_name", "method description", callback, NULL);
+ if (!xmmsc_service_method_arg_type_add (method, "argument", XMMSC_SERVICE_ARG_TYPE_STRING, 0))
+     fprintf (stderr, "failed to push type\n");
+ if (!xmmsc_service_method_ret_type_add (method, "return", XMMSC_SERVICE_ARG_TYPE_STRING, 0))
+     fprintf (stderr, "failed to push type\n");
+
+Finally, it is time to register the method.  Notice that the callback function set earlier will be attached to the broadcast by calling xmmsc_result_notifier_set() automatically, you do not need to do this again.
+
+ result = xmmsc_service_method_register (connection, service, method);
+ if (xmmsc_result_iserror (result))
+     fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
+ xmmsc_result_unref (result);
+
+So we are done, the method is registered to the server if no error occurs.  But do not hurry to free the method structure.  It will be needed later, and it will be freed automatically when it is no longer needed.
+
+A service only needs to be registered once at the beginning if you have multiple methods associate with this service.
+
+== Inside a Method ==
+
 = Client =
 
 Go back to [[Summer of Code 2007/Service Clients|Service Client Summary]].
