--- a/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
@@ -1,3 +1,9 @@
+= Overview =
+
+Service clients and clients are essentially clients, but they differ from each other in the sense that the former interact with all the other clients.  This page will show you what the essential steps are for creating a service client and how a client can use a service client's method.  Hopefully, this will give you a better understanding of what service clients are.
+
+For details of service client API, you should always consult XMMS2 Doxygen Documentation.  If you need some working code examples, [http://repo.or.cz/w/xmms2-tutorial.git service client tutorial] is a good place to start with.  [[Summer_of_Code_2007/Service_Clients/scm|Service Client Manager]] can also be consulted if you need a full featured service client example.
+
 = Service Client =
 
 Since a service client differs from a normal client in the way that it interacts with other clients by providing services and corresponding methods, we need a way to let the server know what our service client provides and how others can use them.  This is done by [[#Registration|registering]] the services and methods to the server.
