change current milestone
Levitation import of page 2333 rev 7838.

--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -1,7 +1,7 @@
 {{GSoCProject
 |student=[[User:zeegeek|Ning Shi]]
 |mentor=[[S%C3%A9bastien_Cevey|SÃ©bastien Cevey]]
-|cmilestone=Service client management
+|cmilestone=Final Evaluation
 |nmilestone=Service clients
 
 |description=
