Add two functions. /* Server side */
Levitation import of page 2382 rev 7843.

--- a/0-/GSoC:2007/Service Clients/Design.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Design.mediawiki
@@ -123,6 +123,12 @@ Different from other server-side objects, service object has a central entry poi
                                     const gchar *name);
  static gboolean xmms_service_matchsc (gpointer key, gpointer value,
                                        gpointer data);
+ static gboolean xmms_service_method_request_matchfd (gpointer key,
+                                                      gpointer value,
+                                                      gpointer data);
+ static gboolean xmms_service_method_request_matchmethod (gpointer key,
+                                                          gpointer value,
+                                                          gpointer data);
  static void xmms_service_key_insert (gpointer key, gpointer value,
                                       gpointer data);
  static void xmms_service_arg_insert (gpointer key, gpointer value,
