--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -574,6 +574,8 @@ Returns the playing position (will be [0;<track_length>] in milliseconds)
 
 === The signals ===
 
+Signals must be emitted from /Player path and org.freedesktop.MediaPlayer interface.
+
 ==== TrackChange ==== 
 Signal is emitted when the "Media Player" plays another "Track". Argument of the signal is the metadata attached to the new "Track"
 
@@ -594,8 +596,6 @@ Signal is emitted when the "Media Player" changes capabilities, Flags are CAN_GO
    <signal name="CapsChange">
      <arg type="i" />
    </signal>
-
-
 
 = See Also =
 * [http://bmpx.beep-media-player.org/site/MPRIS_Interfacing_Specification MPRIS]
