--- a/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
@@ -18,6 +18,7 @@ There are three major steps for registering a method, registering the service it
 
  char service[] = "service.name";
  result = xmmsc_service_register (connection, service, "service description", 1, 0);
+ xmmsc_result_wait (result);
  if (xmmsc_result_iserror (result))
      fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
  xmmsc_result_unref (result);
