--- a/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
@@ -35,6 +35,7 @@ Then you have to create the method structure and push the types of the arguments
 Finally, it is time to register the method.  Notice that the callback function set earlier will be attached to the broadcast by calling xmmsc_result_notifier_set() automatically, you do not need to do this again.
 
  result = xmmsc_service_method_register (connection, service, method);
+ xmmsc_result_wait (result);
  if (xmmsc_result_iserror (result))
      fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
  xmmsc_result_unref (result);
