--- a/0-/GSoC:2007/Service Clients/scm.mediawiki
+++ b/0-/GSoC:2007/Service Clients/scm.mediawiki
@@ -6,6 +6,8 @@ Remote service clients are not managed by scm.  Since they cannot be shut down o
 
 Service client should place a config file with the filename the same as the its own name under service_clients sub-directory in XMMS2 config dir on installation.  And on uninstallation, the corresponding config file should be removed as well.  scm reads in all config files on startup every time.  Besides, scm can also monitor changes made to any config files during runtime.  By default, scm will use libinotify kernel feature if you are using a kernel later than 2.6.13.  Otherwise, periodic polling method is chosen.  Monitoring feature can be enabled/disabled by changing scm configuration.  This is discussed in the [[#Configuration|following section]].  If you have disabled monitoring feature, but do not want to restart scm in order to read in the changes, you can force scm to check for any changes by issuing a method call to the [[#Miscellaneous|"poll" method]].
 
+'''Note:''' Although service client API provides a shutdown feature as well, namely xmmsc_service_shutdown(), it is crucially different from the one provided by scm.  For service clients which are managed by scm, you can either try to send a shutdown request by calling xmmsc_service_shutdown() or ask scm to shut it down for you.  However, service client has the right to ignore the shutdown request.  So xmmsc_service_shutdown() may not always work as expected.  In this case, scm will force the service client to shutdown by killing the process if it ignores the shutdown request.  To be clear, if you need guaranteed shutdown, use the one provided by scm.  ''This only applies to service clients which are managed by scm!''
+
 = Configuration =
 
 scm is configurable by setting three configvals in the server's config file manually or using [http://doxygen.xmms2.xmms.se/clientlib/stable/xmmsclient/group__ConfigControl.html configval API].  All of the configvals are located in "clients" section and under "scm" client name.
