--- a/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
+++ b/0-/GSoC:2007/Service Clients/Tutorial.mediawiki
@@ -78,7 +78,7 @@ Listing methods are similar to this.  So I am not going to describe in details.
 
 Listing the names of all available services or methods might not be enough.  Sometimes you need detailed information to provide to the user.  Then you will need to describe each service and method when needed.  To describe a service and extract the detail information, you can do
 
- result = xmmsc_service_method_describe (connection, "service.name");
+ result = xmmsc_service_describe (connection, "service.name");
  xmmsc_result_wait (result);
  if (xmmsc_result_iserror (result))
      fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
@@ -90,7 +90,7 @@ Listing the names of all available services or methods might not be enough.  Som
  }
  xmmsc_result_unref (result);
 
-Describing a method is similar to this except that the result does not contain any information about the method's argument and return types.  It has to be fetched in a separate call.  The following shows how to describe a method and its types, then create a method structure from the results.
+Describing a method is similar to this except that the result is not a dictionary.  You have to get the resulting method structure by calling xmmsc_result_get_method().  The following shows how to describe a method, then create a method structure from the results.  Remember that if you need to use the method later, then you have to reference it before unreferencing the result.
 
  result = xmmsc_service_method_describe (connection, "service.name", "method_name");
  xmmsc_result_wait (result);
@@ -99,18 +99,8 @@ Describing a method is similar to this except that the result does not contain a
      return 1;
  }
  xmmsc_result_get_service_method (result, &method);
+ xmmsc_service_method_ref (method);
  xmmsc_result_unref (result);
- 
- result = xmmsc_service_method_describe_args (connection, "service.name", "method_name");
- xmmsc_result_wait (result);
- if (xmmsc_result_iserror (result)) {
-     fprintf (stderr, "%s\n", xmmsc_result_get_error (result));
-     return 1;
- }
- xmmsc_result_get_service_method_arg_types (result, method);
- xmmsc_result_unref (result);
-
-If you are sure that the method does not contain any arguments and return values, then it is unnecessary to describe the types.
 
 == Requesting ==
 
